c4prj2_input/grade.txt
Grading at Thu Mar 11 08:32:42 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:17:21: error: comparison between pointer and integer [-Werror]
       if ( str[i-2] != "?"){ 
                     ^
input.c:17:21: error: comparison with string literal results in unspecified behavior [-Werror=address]
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
